objects/FinServ__BillingStatement__c.object
<CustomObject>
    <description>Represents billing amounts and dates for a client&apos;s financial account</description>
    <fields>
        <fullName>FinServ__BalanceTransfers__c</fullName>
        <complianceGroup>HIPAA</complianceGroup>
        <inlineHelpText>test</inlineHelpText>
        <label>Balance Transfers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingPeriodEnd__c</fullName>
        <complianceGroup>HIPAA</complianceGroup>
        <label>Billing Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__BillingPeriodStart__c</fullName>
        <label>Billing Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__CashAdvances__c</fullName>
        <label>Cash Advances</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Deposits__c</fullName>
        <label>Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__EndingBalance__c</fullName>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__FeesCharged__c</fullName>
        <label>Fees Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Billing Statements</relationshipLabel>
        <relationshipName>BillingStatements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>FinServ__InsurancePolicy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Policy linked to this Billing statement</description>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Billing Statements</relationshipLabel>
        <relationshipName>BillingStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestThisPeriod__c</fullName>
        <label>Interest This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestYTD__c</fullName>
        <label>Interest YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__LastPaymentDate__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumPaymentDue__c</fullName>
        <description>Minimum payment due</description>
        <label>Minimum Payment Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__OtherCredits__c</fullName>
        <label>Other Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PastDueAmount__c</fullName>
        <description>Total amount due at the end of the billing period</description>
        <label>Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Payments__c</fullName>
        <description>Payments received since the last statement.</description>
        <label>Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PreviousBalance__c</fullName>
        <label>Previous Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Purchases__c</fullName>
        <label>Purchases</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__StatementDate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Withdrawals__c</fullName>
        <label>Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Statement</label>
    <nameField>
        <displayFormat>B-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Statements</pluralLabel>
    <recordTypes>
        <fullName>FinServ__Credit</fullName>
        <active>true</active>
        <description>Credit Billing Statement</description>
        <label>Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__Debit</fullName>
        <active>true</active>
        <description>Debit Billing Statement</description>
        <label>Debit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>